--- a/app/assets/stylesheets/base/_controls.scss
+++ b/app/assets/stylesheets/base/_controls.scss
@@ -40,6 +40,7 @@
     background: fade-out($bg-color, .4);
     color: lighten($color, 20%);
     border: 1px solid fade-out($bg-color, .4);
+    pointer-events: none;
   }
 
   &.small {
