Add Article Details to Translation Page

--- a/app/views/translations/_details.slim
+++ b/app/views/translations/_details.slim
@@ -28,9 +28,10 @@ fieldset.details
     .item
       dt Context
       dd = (translation.key.context || "none")
-    .item
-      dt Importer
-      dd = translation.key.importer_name
+    - if translation.key.importer
+      .item
+        dt Importer
+        dd = translation.key.importer_name
     - if translation.key.fencers.present?
       .item
         dt Fencers
