Add an Article Issues page

--- a/app/assets/stylesheets/pages/articles.css.scss
+++ b/app/assets/stylesheets/pages/articles.css.scss
@@ -7,7 +7,7 @@ body.articles {
     width: 170px;
   }
 
-  &#articles-show {
+  &#articles-show, &#articles-issues {
     .download-button {
       margin-right: 10px;
     }
