--- a/app/assets/stylesheets/pages/commits.css.scss
+++ b/app/assets/stylesheets/pages/commits.css.scss
@@ -107,7 +107,7 @@ body.commits {
   }
 }
 
-#issues-section {
+#issues-tab {
   legend { margin-bottom: 20px; }
   .no-issues-found { text-align: center; }
   table.issues tbody {
