--- a/app/views/kaminari/_paginator.html.slim
+++ b/app/views/kaminari/_paginator.html.slim
@@ -8,7 +8,7 @@
 
 == paginator.render do
   nav.pagination
-    .switch-page
+    .switch-page.left
       == first_page_tag unless current_page.first?
       == prev_page_tag unless current_page.first?
     .pages
@@ -17,6 +17,6 @@
           == page_tag page
         - elsif !page.was_truncated?
           == gap_tag
-    .switch-page
+    .switch-page.right
       == next_page_tag unless current_page.last?
       == last_page_tag unless current_page.last?
